package model;

public class Relatorio {
	public void gerarRelatorio() {
		System.out.println("Olá");
	}
}
